# bibcite

./: cli.py  pyproject.toml  quickcite.py  readme.md
bibcite/: cli.py  work.py
